# digitor

./: .gitignore  CMakeLists.txt  README.md
src/: Network.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkCUDA.cpp  NeuralNetworkCUDA.h  TrainData.h  kernel.cu  kernel.h  main.cpp  matrixor.cu  matrixor.h
